force-app/main/default/objects/Warehouse_Location__c/Warehouse_Location__c.object-meta.xml
<CustomObject>
    <label>Warehouse Location</label>
    <nameField>
        <label>Warehouse Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>