force-app/main/default/objects/Warehouse_Location__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DLR/DO account that owns the Location</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warehouse Locations</relationshipLabel>
    <relationshipName>Warehouse_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>