force-app/main/default/objects/Warehouse_Location__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>