force-app/main/default/objects/Warehouse_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID_18__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Location__c</columns>
    <columns>Location_Code__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>